# nlp_aquest

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
docs/: Makefile  commands.rst  conf.py  index.rst  make.bat
notebooks/: data_exploration.ipynb
