[tool.poetry]
name = "dt_test"
version = "0.1.0"
description = ""
authors = ["Bob Kraft <bkraft4257@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = "^4.2.0"
pytest = "^6.2.5"
awscli = "^1.20.44"
pydantic = "^1.8.2"
pandas = "^1.3.3"
flake8 = "^3.9.2"
black = "^21.9b0"
python-dotenv = "^0.19.0"
coverage = "^5.5"
great-expectations = "^0.13.34"
matplotlib = "^3.4.3"
plotly = "^5.3.1"
streamlit = "^0.88.0"
altair = "^4.1.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
